[package]
name = "geo-ip"
version = "0.1.0"
edition = "2021"
description = "Acquire geography location by IP address"
license = "MIT"
homepage = "https://github.com/xmh0511"
repository = "https://github.com/xmh0511/geo-ip"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.32.0", features = ["macros","rt-multi-thread"]}
reqwest = {version="0.11.20",features = ["json"]}
serde = {version = "1.0.186",features = ["derive"]}
serde_json = "1.0.105"
anyhow = "1.0.75"